# educom-data-science-1763971405

json-query/: amount-peop-per-year-per-continent.csv  amount-peop-per-year-per-continent.xls  density-per-city.csv  density-per-city.xls  growth-by-continent.csv  growth-by-continent.xls  opdracht6_1.jq  opdracht6_2.jq  opdracht6_3.jq  opdracht6_4.jq  opdracht6_5.jq  opdracht7.jq  opdracht8.py  percentage-world-population.csv  percentage-world-population.xls  readme.md  total-growth.csv  total-growth.xls
python/: python_mysql_exercise.py  readjson.py  readxml.py  writeCsv.py  writeTxtFile.py  writexml.py
python/codeExamples/: importCsv.py  multiWriter.py  multiparser.py  mydbpkgtest.py  readTxtFile.py  readjson.py  writeCsv.py  writejson.py
python/data/: sample.csv  sample.json  sample.txt  test.csv  test.json  test.xml  testwrite.xml  writejson.json  writesample.csv
python/mydbpkg/: README.md  pyproject.toml
python/mydbpkg/src/mydbpkg/: __init__.py  db.py  repository.py
python/mydbpkg/src/mydbpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
relational-data-storage/opdracht-3/: DS-opdracht-3.2.1.sql  DS-opdracht-3.2.10.sql  DS-opdracht-3.2.2.sql  DS-opdracht-3.2.3.sql  DS-opdracht-3.2.4.sql  DS-opdracht-3.2.5.sql  DS-opdracht-3.2.6.sql  DS-opdracht-3.2.7.sql  DS-opdracht-3.2.8.sql  DS-opdracht-3.2.9.sql  DS-opdracht-3.3.1.sql  DS-opdracht-3.3.2.sql  DS-opdracht-3.3.3.sql
relational-data-storage/opdracht-4/: DS-opdracht-4.1.1.sql  DS-opdracht-4.1.2.sql  DS-opdracht-4.1.3.sql  DS-opdracht-4.1.4.sql  DS-opdracht-4.1.5.sql  DS-opdracht-4.1.6.sql  (+5 more)
(+20 files in other folders)
